[package]
name = "demo"
version = "0.1.0"
authors = ["Taras Tyshko <tarastyshko@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
actix-rt = "2.8.0"
actix-service = "2.0"
chrono = {version = "0.4.24", futures = ["serde"]}
derive_more = "0.99.17"
diesel = { version = "2.0.3", futures = ["postgres","uuidv07","r2d2", "chrono"]}
dotent = "0.2.10"
futures = "0.3.28"
r2d2 = "0.8.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
alcoholic_jwt = "1.0.1"
reqwest = "0.11.16"
